--- a/app/pug/template.pug
+++ b/app/pug/template.pug
@@ -26,9 +26,12 @@ html
   head
     include headCode
     block title 
+    block head
   body 
     .h1 
       a(href="index.html") Самые популярные книги
+    .h2 
+      a(href="Page_03.html") Галерея книг
     .h2 
       a(href="Page_02.html") Список самых популярных книг
     block content
