--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -207,12 +207,29 @@ p.title-1
 			background-color: bg-yel
 			border: dashed black 2px
 
+.main-block
+	#butt-sort, #butt-filter, #butt-graf
+		font-style: italic
+		&:hover, &:active, &::selection
+			background-color: bg-yel
+			border: dashed black 2px
+		&:active
+			//color red
+			font-weight: bold			
+			border: dashed black 2px
+
 .table > p, .table > input
 	display block
 
 .right-edge-1
 	display: grid
 	grid-column: 2/3
+
+	
+.block-02
+	.left-edge-1
+		p
+			line-height: 30px
 
 @media (min-width 800px)
 	details
@@ -250,6 +267,45 @@ p.title-1
 	summary
 		font-size: large
 
+
+
+.block-02
+	margin-top: 20px
+	
+
+@media (max-width 1200px)
+	.table.class_01 
+		margin-bottom: 40px
+		//bord()
+
+.main-block
+	//padding-bottom: 0px
+	height: 600px
+	//bord()
+
+@media (max-width 1200px)
+	.main-block
+		height: auto
+
+// Надпись "Блок настроек показа"
+
+.text-002
+	font-size: x-large
+	border 2px black solid
+	background-color: dark-accent-blue
+	border-radius: 10px
+	margin 10px
+	padding 10px
+	padding-left 20px
+	text-align: center
+
+// Название таблицы
+
+p.text-001
+	text-align: center
+	margin-top 30px
+	font-size: 35px
+
 // Таблица 
 
 
@@ -271,3 +327,80 @@ tr.title
 
 td, summary
 	color white 
+
+// Надпись о том, что ничего не найдено
+
+#bad-news
+	text-align: center
+
+table
+	bord()	
+	//border: solid red 1px
+	
+	color white
+	tr
+		border: solid white 1px
+		td
+			border: solid white 1px
+			color white
+			
+
+// Блок для графика
+
+.block-graf
+	//bord()
+	width: 90%
+	height: auto
+	margin:  30px auto
+
+	width: 80%
+	margin: 20px auto
+	margin-top 100px
+	padding: 10px
+	background-color: lightgray
+	border-radius: 10px
+	box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.35)
+	
+@media (min-width 600px)
+	.block-graf
+		width: 600px
+
+
+.block-graf > p
+	font-size: x-large
+	text-align: center
+	margin 10px
+	color black
+
+////////////////////////
+body
+	min-width: 600px
+
+.curr-graff
+	//bord()
+	height 300px
+	width 600px
+	margin: auto
+	//bord()
+	
+.bar {
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+}
+
+.bar-container {
+  margin-right: 4px;
+  margin-left: 4px;
+}
+
+//---
+
+@media (min-width 1200px)
+	.block-02
+		.left-edge-1
+			p
+				//color red
+				line-height: 2.73;
+
+.zoop-0
+	height: 100px
